--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,11 +24,9 @@ build:
 
 deploy:
   stage: deploy
-  before_script:
-    - apk update && apk add --no-cache openssh openssh-client bash curl
+  image: kroniak/ssh-client
   script:
-    - eval $(ssh-agent -s)
-    - echo "$DEPLOY_KEY" | tr -d '\r' | ssh-add - > /dev/null
-    - mkdir -p ~/.ssh
-    - chmod +x ./deploy.sh
-    - sh ./deploy.sh
+    - chmod 400 $DEPLOY_KEY
+    - ssh -o StrictHostKeyChecking=no -i $DEPLOY_KEY $SERVER_USER@$SERVER_IP "docker pull $CI_REGISTRY_IMAGE/hrm/frontend:latest"
+    - ssh -o StrictHostKeyChecking=no -i $DEPLOY_KEY $SERVER_USER@$SERVER_IP "docker stop frontend || true && docker rm frontend || true"
+    - ssh -o StrictHostKeyChecking=no -i $DEPLOY_KEY $SERVER_USER@$SERVER_IP "docker run -p 3000:80 -d --name frontend $CI_REGISTRY_IMAGE/hrm/frontend:latest"
