fix: specify image not as env var

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,6 @@ deploy:
   script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
     - chmod 400 $DEPLOY_KEY
-    - ssh -o StrictHostKeyChecking=no -i $DEPLOY_KEY $SERVER_USER@$SERVER_IP "docker pull $CI_REGISTRY_IMAGE:latest"
+    - ssh -o StrictHostKeyChecking=no -i $DEPLOY_KEY $SERVER_USER@$SERVER_IP "docker pull registry.megacom.local:4567/hrm/frontend:latest"
     - ssh -o StrictHostKeyChecking=no -i $DEPLOY_KEY $SERVER_USER@$SERVER_IP "docker stop frontend || true && docker rm frontend || true"
-    - ssh -o StrictHostKeyChecking=no -i $DEPLOY_KEY $SERVER_USER@$SERVER_IP "docker run -p 3000:80 -d --name frontend $CI_REGISTRY_IMAGE:latest"
+    - ssh -o StrictHostKeyChecking=no -i $DEPLOY_KEY $SERVER_USER@$SERVER_IP "docker run -p 3000:80 -d --name frontend registry.megacom.local:4567/hrm/frontend:latest"
